--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ indent_size = 2
 
 [tool.ruff]
 target-version = "py312"
+line-length = 150
 # Exclude a variety of commonly ignored directories.
 extend-exclude = [
     "*/migrations/*.py",
